--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
+  card_swiper: ^1.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -44,6 +45,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/placeholders/
     # - assets/icons/menu/hoteles.svg
     - assets/icons/
     - assets/twt.png
