--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   card_swiper: ^1.0.4
   flutter_rating_bar: ^4.0.0
   bordered_text: ^2.0.0
+  rename: ^1.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
